final unit tests